Add "massbank" option to endpoint /convert and add endpoint /rawtext
